--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 web:
   image:                   'gitlab/gitlab-ce:latest'
   restart:                 always
-  hostname:                'gitlab.example.com'
+  hostname:
+    environment:
+      - URL
   environment:
     GITLAB_OMNIBUS_CONFIG: |
-      external_url 'http://gitlab.example.com:80'
+      external_url '${URL}:80'
       gitlab_rails['gitlab_shell_ssh_port'] = 22
   ports:
     - '80:80'
