Add apt install to '.travis.yml'

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ service:
   - docker
 
 pre_install:
+  - sudo apt install -y npm
   - docker build -t gitlab/gitlab-ce -f Dockerfile.dev .
 
 script:
