Changed `pre_install` to `before_install` in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo:                required
 service:
   - docker
 
-pre_install:
+before_install:
   - docker build -t gitlab/gitlab-ce -f Dockerfile.dev .
 
 script:
