Fixed invalid tag in `docker build` command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ pre_install:
   - sudo apt update
   - sudo apt install -y npm
   # For testing, Dockerfile.dev is used instead of Dockerfile.
-  - docker build -t gitlab/gitlab-ce -file Dockerfile.dev .
+  - docker build --tag gitlab/gitlab-ce --file Dockerfile.dev .
 
 script:
   - docker run gitlab/gitlab-ce npm run test -- --coverage
