--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
 sudo:                required
 service:
   - docker
+  - npm
 
 before_install:
 - docker build --tag gitlab/gitlab-ce --file Dockerfile.dev .
