--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,8 @@
 # Use GitLab Community Edition Docker image.
 FROM gitlab/gitlab-ce
 
-RUN npm install
+# Open ports
+EXPOSE 443 80 22
 
-CMD ["npm", "run", "start"]
+# Start GitLab Process
+CMD ["gitlab-ctl","start"]
