Changed status for '.travis.yml' to modified.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Code copied from tutorials:
+# Code modified from tutorials:
 # https://www.udemy.com/docker-and-kubernetes-the-complete-guide/
 
 language:            bash
